# learn-pyglet

./: .coverage  .gitattributes  .gitignore  AGENTS.md  DEBUG_LOGGING.md  README.md  demo_debug_logging.py  demo_log_levels.py  pyproject.toml  test_startup.py
.agents/skills/analyzing-refactoring-tasks/: SKILL.md
.beads/: config.yaml  issues.jsonl
.beads/bugs/: bd-dep-nil-pointer.md
docs/: ARCHITECTURE.md  ASSETS.md  ASSETS.md.1  DEBUG_LOGGING.md  SCREENSHOT_OPTIMIZATION.md  SETUP.md  TESTING.md  asset_organization.md
scripts/: demo_debug_logging.py  demo_log_levels.py  demo_verbosity_levels.py  generate_assets.ps1
specs/: asset_organization.md  entity_system.md  health_system.md  ui_design.md
src/chaser_game/: __init__.py  asset_manifest.py  assets.py  cli.py  colors.py  config.py  hello_world.py  logging_config.py  movement.py  restore_assets.py  screen_manager.py  sprite_generator.py  types.py
src/chaser_game/assets/: manifest.yaml
src/chaser_game/entities/: base.py  character.py  kitten.py  mouse.py
src/chaser_game/mechanics/: __init__.py  collision.py  health.py  input.py
src/chaser_game/screens/: __init__.py  base.py  game_end.py  game_running.py  game_start.py  splash.py
src/chaser_game/systems/: __init__.py  collision.py  health.py  input.py
src/chaser_game/ui/: health_bar.py  logo.py  primitives.py
src/chaser_game/utils/: pbo.py
src/pyglet_readme/: __init__.py  asset_manifest.py  assets.py  config.py  game_state.py  hello_world.py  logging_config.py  movement.py  restore_assets.py  screen_manager.py  sprite_generator.py
src/pyglet_readme/assets/: manifest.yaml
src/pyglet_readme/entities/: __init__.py  character.py  kitten.py  mouse.py
src/pyglet_readme/screens/: __init__.py  base.py  game_end.py  splash.py  (+2 more)
tests/: __init__.py  test_asset_manifest.py  test_asset_structure.py  test_assets.py  test_cli.py  test_config.py  test_e2e_game_startup.py  test_entity_base.py  test_entity_kitten.py  test_entity_mouse.py  test_game_state.py  test_hello_world_assets.py  test_logging.py  test_mechanics_collision.py  test_mechanics_health.py  test_mechanics_input.py  test_movement.py  test_performance_screenshots.py  test_restore_assets_logic.py  test_screen_manager_handlers.py  test_screen_manager_screenshots.py  test_sprite_generation_integration.py  test_sprite_generator.py  test_startup.py  test_systems_collision.py  test_systems_health.py  test_systems_input.py  test_ui_health_bar.py  test_verify_assets.py
(+1 files in other folders)
