[project]
name = "pyglet-readme"
version = "0.1.0"
description = "A first application using the pyglet graphics engine."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyglet>=2.1.11",
]

[project.scripts]
pyglet-readme = "pyglet_readme:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.37.0",
]
