[project]
name = "chaser-game"
version = "0.1.0"
description = "A first application using the pyglet graphics engine."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "pyglet>=2.1.11",
    "pyyaml>=6.0.3",
]

[project.scripts]
chaser = "chaser_game.cli:cli"
restore-assets = "chaser_game.restore_assets:restore_assets_cli"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.37.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.basedpyright]
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = false
exclude = ["**/node_modules", "**/__pycache__"]
include = ["src/chaser_game", "tests"]
executionEnvironments = [
    { root = "src/chaser_game" },
    { root = "tests", reportPrivateUsage = false },
]

[tool.ruff]
line-length = 102
lint.select = ["E", "F", "I", "W", "B"]
lint.ignore = ["E501", "F541", "W293"]
src = ["src/chaser_game", "tests"]
